--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		/>
 		<link rel="stylesheet" href="index.css" />
 
-		<title>Jaden Rose - Assignment 2 - ICT 443</title>
+		<title>Vanilla JS Task Tracker</title>
 
 		<script
 			src="https://kit.fontawesome.com/a0215abb7b.js"
@@ -25,8 +25,8 @@
 	</head>
 	<body>
 		<header>
-			<div class="logo">ICT 443 019 - Jaden Rose</div>
-			<span>Assignment 2</span>
+			<div class="logo">Vanilla JS Task Tracker</div>
+			<span>by Jaden Rose</span>
 		</header>
 
 		<main>
